@@ -17,14 +17,14 @@ private String fieldName;
 private int fieldValue;
 private String stringValue;
 public ResourceNotFoundException(String resourceName, String fieldName, int fieldValue) {
-	super(String.format("%s not found with %s : %s ",resourceName,fieldName,fieldValue));
+	super("%s not found with %s : %s ".formatted(resourceName, fieldName, fieldValue));
 	this.resourceName = resourceName;
 	this.fieldName = fieldName;
 	this.fieldValue = fieldValue;
 }
 public ResourceNotFoundException(String resourceName2, String fieldName2, String email) {
 	// TODO Auto-generated constructor stub
-	super(String.format("%s not found with %s : %s ",resourceName2,fieldName2,email));
+	super("%s not found with %s : %s ".formatted(resourceName2, fieldName2, email));
 	this.resourceName=resourceName2;
 	this.fieldName=fieldName2;
 	this.stringValue=email;
